feat: Spring Boot upgrade from 2.7.18 to 3.3.13, plus upgrade of extra related dependencies - initial commit. Some CheckStyle errors/warns are fixed.